// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render properly when it is disabled 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c3 .c6 + .c1 {
  margin-left: 5px;
}

.c3 .c1 + .c6 {
  margin-left: 5px;
}

.c4 .c6 + .c1 {
  margin-left: 5px;
}

.c4 .c1 + .c6 {
  margin-left: 5px;
}

.c5 .c6 + .c1 {
  margin-left: 5px;
}

.c5 .c1 + .c6 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #AAAAAA;
  background-color: #AAAAAA;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c6 + .c1 {
  margin-left: 5px;
}

.c0 .c1 + .c6 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
    disabled=""
  >
    <span
      class="c1 c2"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with any icon at the beginning of the text 1`] = `
.c2 {
  font-size: 16px;
}

.c2 * {
  fill: #555;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c5 .c1 + .c3 {
  margin-left: 5px;
}

.c5 .c3 + .c1 {
  margin-left: 5px;
}

.c6 .c1 + .c3 {
  margin-left: 5px;
}

.c6 .c3 + .c1 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c1 + .c3 {
  margin-left: 5px;
}

.c0 .c3 + .c1 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <svg
      class="c1 c2"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
        fill="currentColor"
      />
    </svg>
    <span
      class="c3 c4"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with any icon at the end of the text 1`] = `
.c2 {
  font-size: 16px;
}

.c2 * {
  fill: #555;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c5 .c1 + .c3 {
  margin-left: 5px;
}

.c5 .c3 + .c1 {
  margin-left: 5px;
}

.c6 .c1 + .c3 {
  margin-left: 5px;
}

.c6 .c3 + .c1 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c1 + .c3 {
  margin-left: 5px;
}

.c0 .c3 + .c1 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <svg
      class="c1 c2"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
        fill="currentColor"
      />
    </svg>
    <span
      class="c3 c4"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with flat variant and primary color 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #012040;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c3 + .c1 {
  margin-left: 5px;
}

.c0 .c1 + .c3 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1 c2"
    >
      Flat Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with outlined variant and secondary color 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c3 .c4 + .c1 {
  margin-left: 5px;
}

.c3 .c1 + .c4 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #FA6F80;
  color: #FA6F80;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c4 + .c1 {
  margin-left: 5px;
}

.c0 .c1 + .c4 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="secondary"
  >
    <span
      class="c1 c2"
    >
      Outlined Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with solid variant 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c3 .c5 + .c1 {
  margin-left: 5px;
}

.c3 .c1 + .c5 {
  margin-left: 5px;
}

.c4 .c5 + .c1 {
  margin-left: 5px;
}

.c4 .c1 + .c5 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c5 + .c1 {
  margin-left: 5px;
}

.c0 .c1 + .c5 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1 c2"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should wrap children into Text component when rendering string or number 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c3 .c6 + .c1 {
  margin-left: 5px;
}

.c3 .c1 + .c6 {
  margin-left: 5px;
}

.c4 .c6 + .c1 {
  margin-left: 5px;
}

.c4 .c1 + .c6 {
  margin-left: 5px;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 .c6 + .c1 {
  margin-left: 5px;
}

.c0 .c1 + .c6 {
  margin-left: 5px;
}

.c5 .c6 + .c1 {
  margin-left: 5px;
}

.c5 .c1 + .c6 {
  margin-left: 5px;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1 c2"
    >
      Some text
    </span>
    <i>
      some icon
    </i>
    <div>
      element2
    </div>
  </button>
</div>
`;
